fixed line spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
 .About {
     margin-left: 80px;
     margin-right: 80px;
+    line-height: 28px;
 }
 
 h1 {
